tests/baselines/reference/destructuringParameterDeclaration1.errors.txt
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration1.ts(5,16): error TS1048: A rest parameter cannot have an initializer.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration1.ts(11,13): error TS2370: A rest parameter must be of an array type.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration1.ts(12,18): error TS1047: A rest parameter cannot be optional.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration1.ts(13,17): error TS1048: A rest parameter cannot have an initializer.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration1.ts(16,19): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string | number'.
  Type 'boolean' is not assignable to type 'number'.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration1.ts(21,4): error TS2345: Argument of type 'string | boolean' is not assignable to parameter of type 'string | number'.
  Type 'boolean' is not assignable to type 'string | number'.
    Type 'boolean' is not assignable to type 'number'.


==== tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration1.ts (6 errors) ====
    type arrayString = Array<String>
    type someArray = Array<String> | number[];
    type stringOrNumArray = Array<String|Number>;
    
    function a3(...x = [1,2,3]) { }
                   ~
!!! error TS1048: A rest parameter cannot have an initializer.
    function a4(...x: (number|string)[]) { }
    function a5(...a) { }
    function a6(...a: Array<String>) { }
    function a7(...a: arrayString) { }
    function a8(...a: stringOrNumArray) { }
    function a9(...a: someArray) { }
                ~~~~~~~~~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
    function a10(...b?) { }
                     ~
!!! error TS1047: A rest parameter cannot be optional.
    function a11(...b = [1,2,3]) { }
                    ~
!!! error TS1048: A rest parameter cannot have an initializer.
    
    
    a4(1, 2, "hello", true);
                      ~~~~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string | number'.
!!! error TS2345:   Type 'boolean' is not assignable to type 'number'.
    var array = [1, 2, 3];
    var array2 = [true, false, "hello"];
    a5([...array]);
    a4(...array);
    a4(...array2);
       ~~~~~~~~~
!!! error TS2345: Argument of type 'string | boolean' is not assignable to parameter of type 'string | number'.
!!! error TS2345:   Type 'boolean' is not assignable to type 'string | number'.
!!! error TS2345:     Type 'boolean' is not assignable to type 'number'.